RESOLVED FIXED11394
HTMLViewSourceDocuments are leaking
https://bugs.webkit.org/show_bug.cgi?id=11394
Summary HTMLViewSourceDocuments are leaking
mitz
Reported 2006-10-23 14:34:00 PDT
run-webkit-tests fast/frames/viewsource-attribute.html shows node leaks. Patch forthcoming.
Attachments
Change RefPtr to pointer to avoid ref cycle (938 bytes, patch)
2006-10-23 14:45 PDT, mitz
timothy: review+
mitz
Comment 1 2006-10-23 14:45:35 PDT
Created attachment 11188 [details] Change RefPtr to pointer to avoid ref cycle
Mark Rowe (bdash)
Comment 2 2006-10-24 04:22:11 PDT
Landed in r17249.
Note You need to log in before you can comment on or make changes to this bug.