2006-10-24  Mitz Pettel  <mitz@webkit.org>

Reviewed by Tim H.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11394
          HTMLViewSourceDocuments are leaking

        * html/HTMLViewSourceDocument.h: Changed RefPtr to plain pointer to avoid
        ref cycle.


git-svn-id: svn://svn.chromium.org/blink/trunk@17249 bbb929c8-8fbe-4397-9dbb-9b2b20218538