third_party/WebKit/WebCore/html/HTMLViewSourceDocument.h
@@ -48,7 +48,7 @@ private:
     Element* addSpanWithClassName(const String&);
 
 private:
-    RefPtr<Node> m_current;
+    Node* m_current;
 };
 
 }
